--- a/saveRetirementUlip-plan/src/main/resources/application.properties
+++ b/saveRetirementUlip-plan/src/main/resources/application.properties
@@ -1,13 +1,3 @@
-## spring data source
-spring.datasource.dbcp2.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/abcd
-spring.datasource.username = root
-spring.datasource.password = password
-server.port = 8088
-
-
-## Hibernate properties
-spring.jpa.show-sql= true
-spring.jpa.hibernate.ddl-auto = update
-logging.level.org.springframework.web=DEBUG
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.profiles.active=dev
+service.name=LifeInsurance-SaveRetirementUlipPlan
+server.servlet.context-path=/oneabc/adityabirla/api
