--- a/saveRetirementUlip-plan/src/main/resources/application.properties
+++ b/saveRetirementUlip-plan/src/main/resources/application.properties
@@ -1,3 +1,16 @@
-spring.profiles.active=dev
+## spring data source
+spring.datasource.dbcp2.driver-class-name = com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://35.200.192.176:3306/ABCDDEVDB
+#spring.datasource.url = jdbc:mysql://localhost:3306/abcd
+spring.datasource.username = root
+spring.datasource.password =Gavs@123
+
+
+## Hibernate properties
+spring.jpa.show-sql= true
+spring.jpa.hibernate.ddl-auto = update
+logging.level.org.springframework.web=DEBUG
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+server.error.whitelabel.enabled=false
 service.name=LifeInsurance-SaveRetirementUlipPlan
-server.servlet.context-path=/oneabc/adityabirla/api
+#server.servlet.context-path=/oneabc/adityabirla/api
